# SWUAV-DANet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: DANet.yaml
scripts/: export.py  predict.py  test.py  train.py  visualize.py
swuav_dan/: __init__.py  registry.py
swuav_dan/heads/: __init__.py  daah.py
swuav_dan/modules/: __init__.py  c2act.py
