[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swuav-danet"
version = "0.1.0"
description = "SWUAV-DANet custom modules and configs for the DAN detector."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ultralytics", "yolo", "swuav", "dan"]
authors = [
  { name = "SWUAV-DAN Authors" }
]
dependencies = [
  "ultralytics==8.2.0",
  "ultralytics-thop>=2.0.0,<2.1",
  "torch>=2.2.0,<2.5.0",
  "torchvision>=0.17.0,<0.20.0",
  "opencv-python>=4.11.0.86",
  "pillow>=10.0.0",
  "pyyaml>=6.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pandas>=2.2.0",
  "tqdm>=4.65.0",
  "albumentations>=1.4.0",
  "einops>=0.7.0",
  "timm>=1.0.0",
  "thop>=0.1.1",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "psutil>=5.9.0",
  "requests>=2.28.0",
  "loguru>=0.7.0",
  "rich>=13.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["swuav_dan*"]
